# cmake-template-1

./: CMakeLists.txt  README.md
lib/test-lib/: CMakeLists.txt  Test.cc  Test.h
lib/test-lib/sub-test/: SubTest.cc  SubTest.h
src/: CMakeLists.txt  main.cc
src/sub-module/: SubModule.cc  SubModule.h
tests/: CMakeLists.txt
tests/sub-module/: SubModule.test.cc
util/: build.sh  clean.sh  run.sh
